chore(#402): use github release api to retrieve last app version